# sapiens-project

./: .gitignore  README.md  pyproject.toml
experiments/: train.py
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
pipeline/: compile.py  pipeline.yaml  run.py
pipeline/components/: data_preprocessing.py  post_training.py  training.py
scripts/: compile-docker.sh  gen-requirements.sh  run-docker.sh
server/: Dockerfile  app.py  requirements.txt  tools.py
